# SolverSpace

./: .env_example  .gitignore  README.md  pyproject.toml
solver_space/: solver_space.py
solver_space/components/: navbar.py
solver_space/components/auth/: login_form.py  password_requirements.py  signup_form.py
solver_space/models/: user.py
solver_space/pages/: index.py  login.py  signup.py
solver_space/services/: supabase.py
solver_space/utils/: validation_types.py  validators.py
tests/: __init__.py  test_validators.py
