[project]
name = "solver-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "reflex>=0.7.3",
    "supabase>=2.14.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-playwright>=0.4.0",
    "playwright>=1.42.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = "."

[tool.uv.sources]
solver-space = { workspace = true }

[dependency-groups]
dev = [
    "solver-space[test]",
]
